# Backinajiffy-Mama

./: .gitignore  README.md  pyproject.toml  requirements-builddocs.txt  requirements.txt  setup.py  x.py
backinajiffy/mama/: avahi.py  cli.py  collections.py  const.py  exc.py  file_utils.py  logging.py  parallel.py  rc.py  remote.py  remote_sync.py  time_utils.py  utils.py
demos/step_0/mama_demo/: __main__.py
demos/step_1/mama_demo/: __main__.py
demos/step_2/: rc.yaml  setup.py
demos/step_2/mama_demo/: __main__.py
demos/step_2/mama_demo/cmds/: hello.py
doc/: conf.py  index.rst  run-autobuild.sh
doc/_static/: LinBiolinum_R.eot  LinBiolinum_RB.eot  LinBiolinum_RI.eot  LinBiolinum_aRL.eot  LinBiolinum_aSB.eot  LinBiolinum_aSI.eot  LinBiolinum_aU.eot  LinBiolinum_aUI.eot  LinBiolinum_aW.eot  LinBiolinum_aWB.eot  LinBiolinum_aWI.eot  fonts.css
doc/_static/zip/Linux_Biolinum/: demo.html  stylesheet.css
doc/_static/zip/Linux_Biolinum_Bold/: demo.html  stylesheet.css
doc/_static/zip/Linux_Biolinum_Capitals/: demo.html  stylesheet.css
doc/_static/zip/Linux_Biolinum_Capitals_Bold/: demo.html  stylesheet.css
doc/_static/zip/Linux_Biolinum_Capitals_Italic/: demo.html  stylesheet.css
doc/_static/zip/Linux_Biolinum_Italic/: demo.html  stylesheet.css
doc/_static/zip/Linux_Biolinum_O_Bold/: demo.html  stylesheet.css
doc/api/: index.rst
doc/api/backinajiffy/: index.rst
doc/howtos/: cliarguments.rst  errorhandling.rst  index.rst  initialisation.rst  logging.rst  outputformatting.rst  remotecmd.rst  subcommands.rst
doc/tutorial/: index.rst
(+21 files in other folders)
